Add router-outlet to change component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -317,7 +317,10 @@
 
 <div class="content" role="main">
 
-  <app-product-list></app-product-list>
+  <!-- <app-product-list></app-product-list> -->
+  <router-outlet></router-outlet>
 </div>
+
+
 
 
