add cart still error get price

--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -3,4 +3,6 @@
 <div *ngIf="product">
     <h3>{{ product.name }}</h3>
     <p>{{ product.description }}</p>
+
+    <button (click)="addToCart(product)">Buy</button>
 </div>
