--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -5,5 +5,5 @@
 </p>
 <div class="cart-item" *ngFor="let item of items">
     <span>{{ item.name }}</span>
-    <!-- <span>{{ item.price | currency  }}</span> -->
+    <span>{{ item.price | currency  }}</span>
 </div>
