--- a/src/app/shipping/shipping.component.html
+++ b/src/app/shipping/shipping.component.html
@@ -1,6 +1,6 @@
 <h3>Shipping Prices</h3>
 
-<div class="shipping-item" *ngfor="let shipping of shippingCosts | async">
+<div class="shipping-item" *ngFor="let shipping of shippingCost | async">
     <span>{{ shipping.type }}</span>
-    <span>{{ shipping.price }}</span>
+    <span>{{ shipping.price | currency }}</span>
 </div>
